--- a/js1/index.html
+++ b/js1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Tasks</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
   <button type="button" onclick="task1()">Task 1</button>
